// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test/app/ui/Screen/Native.test.js Render props: { center: true } 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Screen
    center={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ScrollView
        contentContainerStyle={
          Object {
            "alignItems": "center",
            "backgroundColor": "#fffffc",
            "flex": 1,
            "justifyContent": "center",
          }
        }
        keyboardShouldPersistTaps="handled"
        scrollEnabled={false}
      />,
      "closedDrawerOffset": 0,
      "content": <SideBar />,
      "onClose": [Function],
      "open": undefined,
      "openDrawerOffset": 0.2,
      "panCloseMask": 0.2,
      "side": "right",
      "styles": Object {
        "drawer": Object {
          "elevation": 5,
          "shadowColor": "#000000",
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
        "mainOverlay": Object {
          "backgroundColor": "rgba(0, 0, 0, 0.8)",
          "elevation": 8,
          "opacity": 0,
        },
      },
      "tapToClose": true,
      "tweenHandler": [Function],
      "type": "overlay",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "contentContainerStyle": Object {
          "alignItems": "center",
          "backgroundColor": "#fffffc",
          "flex": 1,
          "justifyContent": "center",
        },
        "keyboardShouldPersistTaps": "handled",
        "scrollEnabled": false,
      },
      "ref": null,
      "rendered": null,
      "type": [MockFunction],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ScrollView
          contentContainerStyle={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fffffc",
              "flex": 1,
              "justifyContent": "center",
            }
          }
          keyboardShouldPersistTaps="handled"
          scrollEnabled={false}
        />,
        "closedDrawerOffset": 0,
        "content": <SideBar />,
        "onClose": [Function],
        "open": undefined,
        "openDrawerOffset": 0.2,
        "panCloseMask": 0.2,
        "side": "right",
        "styles": Object {
          "drawer": Object {
            "elevation": 5,
            "shadowColor": "#000000",
            "shadowOpacity": 0,
            "shadowRadius": 0,
          },
          "mainOverlay": Object {
            "backgroundColor": "rgba(0, 0, 0, 0.8)",
            "elevation": 8,
            "opacity": 0,
          },
        },
        "tapToClose": true,
        "tweenHandler": [Function],
        "type": "overlay",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "contentContainerStyle": Object {
            "alignItems": "center",
            "backgroundColor": "#fffffc",
            "flex": 1,
            "justifyContent": "center",
          },
          "keyboardShouldPersistTaps": "handled",
          "scrollEnabled": false,
        },
        "ref": null,
        "rendered": null,
        "type": [MockFunction],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`test/app/ui/Screen/Native.test.js Render props: {} 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Screen />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <ScrollView
        contentContainerStyle={
          Object {
            "backgroundColor": "#fffffc",
            "flex": 1,
          }
        }
        keyboardShouldPersistTaps="handled"
        scrollEnabled={false}
      />,
      "closedDrawerOffset": 0,
      "content": <SideBar />,
      "onClose": [Function],
      "open": undefined,
      "openDrawerOffset": 0.2,
      "panCloseMask": 0.2,
      "side": "right",
      "styles": Object {
        "drawer": Object {
          "elevation": 5,
          "shadowColor": "#000000",
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
        "mainOverlay": Object {
          "backgroundColor": "rgba(0, 0, 0, 0.8)",
          "elevation": 8,
          "opacity": 0,
        },
      },
      "tapToClose": true,
      "tweenHandler": [Function],
      "type": "overlay",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "contentContainerStyle": Object {
          "backgroundColor": "#fffffc",
          "flex": 1,
        },
        "keyboardShouldPersistTaps": "handled",
        "scrollEnabled": false,
      },
      "ref": null,
      "rendered": null,
      "type": [MockFunction],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ScrollView
          contentContainerStyle={
            Object {
              "backgroundColor": "#fffffc",
              "flex": 1,
            }
          }
          keyboardShouldPersistTaps="handled"
          scrollEnabled={false}
        />,
        "closedDrawerOffset": 0,
        "content": <SideBar />,
        "onClose": [Function],
        "open": undefined,
        "openDrawerOffset": 0.2,
        "panCloseMask": 0.2,
        "side": "right",
        "styles": Object {
          "drawer": Object {
            "elevation": 5,
            "shadowColor": "#000000",
            "shadowOpacity": 0,
            "shadowRadius": 0,
          },
          "mainOverlay": Object {
            "backgroundColor": "rgba(0, 0, 0, 0.8)",
            "elevation": 8,
            "opacity": 0,
          },
        },
        "tapToClose": true,
        "tweenHandler": [Function],
        "type": "overlay",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "contentContainerStyle": Object {
            "backgroundColor": "#fffffc",
            "flex": 1,
          },
          "keyboardShouldPersistTaps": "handled",
          "scrollEnabled": false,
        },
        "ref": null,
        "rendered": null,
        "type": [MockFunction],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
